<resources>
    <string name="app_name">Contask</string>
    <string name="app_id">582590325255918</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling_tasks">ScrollingTasksActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_sample_carousel_view">SampleCarouselViewActivity</string>
    <string name="button_login">Entrar</string>
    <string name="button_register">Cadastrar</string>
    <string name="button_photo">Adicione uma foto</string>
    <string name="login">Email</string>
    <string name="name">Nome</string>
    <string name="password">Senha</string>
    <string name="password_message">A senha deve conter ao menos 6 caracteres</string>
    <string name="check_fields">Confira os campos e se selecionou uma foto</string>
    <string name="password_diferent">Senhas diferentes</string>
    <string name="password_confirm">Confirmar senha</string>
    <string name="register">Não tem uma conta? Crie aqui!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="sucess_register">Registro efetuado com sucesso. Aguarde um momento...</string>
    <string name="error_register">Ocorreu um erro no registro, tente novamente</string>
    <string name="invalid_email">Email inválido</string>
    <string name="invalid_password">Senha inválida</string>
    <string name="failure_login">Usuário ou senha invalida</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Procurar</string>
    <string name="campaigns">Campanhas</string>
    <string name="chats">Conversas</string>
    <string name="settings">Ajustes</string>
    <string name="logout">Sair</string>
    <string name="hint_delivery">Digite a resposta ou alguma informação sobre a task...</string>
    <string name="hint_name">Digite seu nome</string>
    <string name="hint_email">Digite seu email</string>
    <string name="hint_password">Digite sua senha</string>
    <string name="hint_password_confirm">Digite sua senha novamente</string>
    <string name="tasks">Tarefas</string>
    <string name="stage_tasks">Etapas da tarefa</string>
    <string name="your_tasks">Suas tarefas</string>
    <string name="other_tasks">Outras tarefas</string>
    <string name="your_stage">Suas etapas</string>
    <string name="other_stages">Outras etapas</string>
    <string name="empyt">Sem conteúdo</string>

    <string name="title_activity_chat">ChatActivity</string>
    <string name="type_message">Digite sua mensagem</string>
    <string name="you">Você</string>
    <string name="send_photo">enviou uma foto</string>
    <string name="feed">Mural</string>
    <string name="participants">Participantes</string>
    <string name="to_apply">Me Candidatar</string>
    <string name="begin">Inicio</string>
    <string name="end">fim</string>
    <string name="deliver_stage_task">Entregar Tarefa</string>
    <string name="delivered_stage_task">Entrega da tarefa</string>
    <string name="no_tasks">Não há tarefas disponíveis agora.</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="send">Enviar</string>
    <string name="request_photos">Para concluir essa task é preciso enviar no minimo </string>
    <string name="photos"> foto(s)</string>
    <string name="faliure_delivery">Houve um erro tente novamente</string>

</resources>
