<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:orientation="vertical" >

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <Button
           android:id="@+id/buttonPhoto"
           android:layout_width="150dp"
           android:layout_height="150dp"
           android:layout_marginHorizontal="32dp"
           android:background="@drawable/button_circle"
           android:backgroundTint="@color/colorPrimaryDark"
           android:text="@string/button_photo"
           android:textColor="@color/white"
           android:textSize="20dp"
           android:textStyle="bold"
           android:layout_marginTop="30dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <de.hdodenhof.circleimageview.CircleImageView
           android:id="@+id/circlePhoto"
           android:layout_width="150dp"
           android:layout_height="150dp"
           android:layout_marginHorizontal="32dp"
           android:layout_marginTop="30dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <LinearLayout
           android:id="@+id/linearLayoutName"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="24dp"
           android:layout_marginTop="20dp"
           android:orientation="vertical"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/buttonPhoto">

           <TextView
               android:id="@+id/textViewName"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/name"
               android:textColor="@color/colorPrimaryDark"
               android:shadowColor="@color/colorAccent"
               android:shadowDx="0"
               android:shadowDy="0"
               android:shadowRadius="1"
               android:textSize="@dimen/text_medium"
               android:textStyle="bold" />

           <EditText
               android:id="@+id/editTextName"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_row="1"
               android:layout_column="1"
               android:layout_margin="10dp"
               android:background="@drawable/edit_text_style"

               android:elevation="5dp"
               android:ems="10"
               android:hint="@string/hint_name"
               android:inputType="textEmailAddress"
               android:textColor="@color/black"
               android:textSize="@dimen/text_size_edit_text" />

       </LinearLayout>

       <LinearLayout
           android:id="@+id/linearLayout4"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="24dp"
           android:layout_marginTop="16dp"
           android:orientation="vertical"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/linearLayoutName">

           <TextView
               android:id="@+id/textView3"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/login"
               android:textColor="@color/colorPrimaryDark"
               android:shadowColor="@color/colorAccent"
               android:shadowDx="0"
               android:shadowDy="0"
               android:shadowRadius="1"
               android:textSize="@dimen/text_medium"
               android:textStyle="bold" />

           <EditText
               android:id="@+id/editTextEmailAddress"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_row="1"
               android:layout_column="1"
               android:layout_margin="10dp"
               android:background="@drawable/edit_text_style"

               android:elevation="5dp"
               android:ems="10"
               android:hint="@string/hint_email"
               android:inputType="textEmailAddress"
               android:textColor="@color/black"
               android:textSize="@dimen/text_size_edit_text" />

       </LinearLayout>

       <LinearLayout

           android:id="@+id/linearLayout3"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_marginTop="16dp"
           android:layout_marginHorizontal="24dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

           <TextView
               android:id="@+id/textPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="@dimen/text_medium"
               android:textColor="@color/colorPrimaryDark"
               android:shadowColor="@color/colorAccent"
               android:shadowDx="0"
               android:shadowDy="0"
               android:shadowRadius="1"
               android:textStyle="bold"
               android:text="@string/password" />

           <EditText
               android:id="@+id/editTextPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:background="@drawable/edit_text_style"
               android:elevation="5dp"
               android:hint="@string/hint_password"

               android:layout_column="1"
               android:layout_row="1"
               android:textSize="@dimen/text_size_edit_text"
               android:layout_margin="10dp"
               android:ems="10"
               android:inputType="textPassword" />
           <TextView
               android:id="@+id/textPasswordHint"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="@dimen/text_small"
               android:layout_marginLeft="30dp"
               android:textColor="@color/colorPurple"
               android:shadowColor="@color/colorAccent"
               android:shadowDx="0"
               android:shadowDy="0"
               android:shadowRadius="1"
               android:textStyle="bold"
               android:text="@string/password_message" />

       </LinearLayout>

       <LinearLayout

           android:id="@+id/linearLayout5"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_marginTop="16dp"
           android:layout_marginHorizontal="24dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

           <TextView
               android:id="@+id/textPasswordConfirm"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="@dimen/text_medium"
               android:textColor="@color/colorPrimaryDark"
               android:shadowColor="@color/colorAccent"
               android:shadowDx="0"
               android:shadowDy="0"
               android:shadowRadius="1"
               android:textStyle="bold"
               android:text="@string/password_confirm" />

           <EditText
               android:id="@+id/editTextPasswordConfirm"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textColor="@color/black"
               android:background="@drawable/edit_text_style"
               android:elevation="5dp"
               android:hint="@string/hint_password_confirm"
               android:layout_column="1"
               android:layout_row="1"
               android:textSize="@dimen/text_size_edit_text"
               android:layout_margin="10dp"
               android:ems="10"
               android:inputType="textPassword" />

       </LinearLayout>

       <Button
           android:id="@+id/buttonRegister"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="24dp"
           android:text="@string/button_register"
           android:layout_marginHorizontal="32dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           android:background="@drawable/button"
           android:backgroundTint="@color/colorGreen"
           android:textColor="@color/white"
           android:textSize="20dp"
           app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />




   </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>