<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:paddingTop="7dp"

            android:elevation="60dp"
            android:background="@drawable/titles"
            android:layout_height="57dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_titles"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:shadowColor="@color/colorCampaign"
                android:shadowDx="-5"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/tasks"
                >

            </TextView>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_task"
                android:tint="@color/colorCampaign"
                >

            </ImageView>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_tasks"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_sub_titles"
            android:textStyle="bold"
            ></TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_item_task_campaign"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            tools:listitem="@layout/item_task_campaign"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/text_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empyt"
            android:textAlignment="center"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_large"
            android:visibility="gone"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            >

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_tasks"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_sub_titles"
            android:textStyle="bold"
            ></TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_item_other_task_campaign"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_task_campaign"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/text_empty_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empyt"
            android:textAlignment="center"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_large"
            android:visibility="gone"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            >

        </TextView>
    </LinearLayout>

</ScrollView>