<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.clara.contask.campaign.CampaignActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/titles"
            android:backgroundTint="@color/colorTask"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <View
                android:id="@+id/status_circle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/circle_status_task"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                >

            </View>
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Title Task"
                android:textColor="@color/white"
                android:textSize="@dimen/text_titles"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >
            <TextView
                android:id="@+id/beginAndEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Inicio: | Fim:"
                android:textColor="@color/black"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/text_medium"
                >

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:backgroundTint="@color/gray_light"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing."
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="@dimen/text_medium"
                android:paddingBottom="20dp"
                >

            </TextView>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_stage"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_sub_titles"
            android:textStyle="bold"
            >

        </TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_item_stage_task_campaign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            tools:listitem="@layout/item_stage_task_campaign"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/text_empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empyt"
            android:textAlignment="center"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_large"
            android:visibility="gone"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            >

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_stages"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_sub_titles"
            android:textStyle="bold"
            >

        </TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_item_other_stage_task_campaign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            tools:listitem="@layout/item_stage_task_campaign"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/text_empty_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empyt"
            android:textAlignment="center"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_large"
            android:visibility="gone"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            >

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/participants"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_sub_titles"
            android:textStyle="bold"
            >

        </TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_item_participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            tools:listitem="@layout/item_participants"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


</ScrollView>
